--- a/index.html
+++ b/index.html
@@ -147,21 +147,21 @@
         <div class="row row-gap-3 p-4" >
             <div class="col-xl-4">
                 <img src="image/woman.jpg" class="card-img-top" alt="pic">
-                <div class="card-body">
+                <div class="card-body pt-4">
                     <p class="paragraph">“Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam tempore obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus ratione sit quaerat unde.”</p>
                     <small class="A">— Kelly Holmes</small>
                 </div>
             </div>
             <div class="col-xl-4">
                 <img src="image/man.jpg" class="card-img-top" alt="pic">
-                <div class="card-body">
+                <div class="card-body pt-4" >
                     <p class="paragraph">“Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam tempore obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus ratione sit quaerat unde.”</p>
                     <small  class="A">— Rebecca Morando</small>
                 </div>
             </div>
             <div class="col-xl-4">
                 <img src="image/man2.jpg" class="card-img-top" alt="pic">
-                <div class="card-body">
+                <div class="card-body pt-4">
                     <p class="paragraph">“Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo omnis voluptatem consectetur quam tempore obcaecati maiores voluptate aspernatur iusto eveniet, placeat ab quod tenetur ducimus. Minus ratione sit quaerat unde.”</p>
                     <small class="A">— Andrew Neel</small>
                 </div>
