--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
@@ -39,9 +40,9 @@
                         DROPDOWN
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a  style="text-decoration: none;" class="dropdown-item active" href="#">Supplements</a></li>
-                        <li><a  style="text-decoration: none;"class="dropdown-item" href="#">Vitamins</a></li>
-                        <li><a  style="text-decoration: none;"class="dropdown-item" href="#">Diet & Nutrition</a></li>
+                        <li><a style="text-decoration: none;" class="dropdown-item active" href="#">Supplements</a></li>
+                        <li><a style="text-decoration: none;" class="dropdown-item" href="#">Vitamins</a></li>
+                        <li><a style="text-decoration: none;" class="dropdown-item" href="#">Diet & Nutrition</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -63,7 +64,8 @@
             <h1>Welcome To <br> Pharma</h1>
         </div>
         <div class="but">
-            <button onclick="document.location='store.html'" type="button" class="btn btn-outline-info">Shop Now</button>
+            <button onclick="document.location='store.html'" type="button" class="btn btn-outline-info">Shop
+                Now</button>
         </div>
     </section>
     <section class="sec2">
@@ -157,16 +159,7 @@
         <div class="multiple-items padding">
             <div>
                 <div class="imgall" style="display: flex; justify-content: center;">
-                <img  src="image/bioderma.png" alt="img">
-            </div>
-                <div  class="redcard">
-                    <h2>Umcka Cold Care</h2>
-                    <p class="price">$120.00</p>
-                </div>
-            </div>
-            <div>
-                <div class="imgall" style="display: flex; justify-content: center;">
-                <img src="image/cetyl purl.png" alt="img">
+                    <img src="image/bioderma.png" alt="img">
                 </div>
                 <div class="redcard">
                     <h2>Umcka Cold Care</h2>
@@ -175,7 +168,7 @@
             </div>
             <div>
                 <div class="imgall" style="display: flex; justify-content: center;">
-                <img src="image/chanca pidera.png" alt="img">
+                    <img src="image/cetyl purl.png" alt="img">
                 </div>
                 <div class="redcard">
                     <h2>Umcka Cold Care</h2>
@@ -184,7 +177,7 @@
             </div>
             <div>
                 <div class="imgall" style="display: flex; justify-content: center;">
-                <img src="image/cla pur.png" alt="img">
+                    <img src="image/chanca pidera.png" alt="img">
                 </div>
                 <div class="redcard">
                     <h2>Umcka Cold Care</h2>
@@ -193,7 +186,7 @@
             </div>
             <div>
                 <div class="imgall" style="display: flex; justify-content: center;">
-                <img src="image/cold care.png" alt="img">
+                    <img src="image/cla pur.png" alt="img">
                 </div>
                 <div class="redcard">
                     <h2>Umcka Cold Care</h2>
@@ -202,7 +195,16 @@
             </div>
             <div>
                 <div class="imgall" style="display: flex; justify-content: center;">
-                <img src="image/poo pourii.png" alt="img">
+                    <img src="image/cold care.png" alt="img">
+                </div>
+                <div class="redcard">
+                    <h2>Umcka Cold Care</h2>
+                    <p class="price">$120.00</p>
+                </div>
+            </div>
+            <div>
+                <div class="imgall" style="display: flex; justify-content: center;">
+                    <img src="image/poo pourii.png" alt="img">
                 </div>
                 <div class="redcard">
                     <h2>Umcka Cold Care</h2>
@@ -252,7 +254,8 @@
             </div>
             <div class="parafot">
                 <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Eius <br>quae reiciendis distinctio
-                    <br>voluptates sed dolorum excepturi <br>iure eaque, aut unde.</p>
+                    <br>voluptates sed dolorum excepturi <br>iure eaque, aut unde.
+                </p>
             </div>
         </div>
 
@@ -274,16 +277,18 @@
             <div class="contactfot">
                 <div><i class="fa-solid fa-location-dot"></i> 203 Fake St. Mountain View,<br> San Francisco, California,
                     USA</div>
+                    <div><a href="mailto:abc@gmail.com"><i class="fa-solid fa-envelope"></i> emailaddress@domain.com</a>
                 <div><a href="tel:3918*******"><i class="fa-solid fa-phone"></i> +2 392 3929 210</a></div>
-                <div><a href="mailto:abc@gmail.com"><i class="fa-solid fa-envelope"></i> emailaddress@domain.com</a>
                 </div>
             </div>
         </div>
     </footer>
     <div class="lastfot">
         <p>Copyright © 2025 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by
-            <span>Colorlib</span></p>
-    </div> 
+            <span>Colorlib</span>
+        </p>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
