--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <div class="col-md-6">
                 <div class="block-16">
                   <figure>
-            <video style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="image/doctor.jpg" controls  loop width="100%"></video>
+            <video style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="image/doctor.jpg"  controls  muted loop  width="100%"></video>
                   </figure>
                 </div>
               </div>
@@ -95,7 +95,7 @@
             <div class="col-md-6">
               <div class="block-16">
                 <figure>
-          <video id="video" style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="storeimg/bcimg.jpg" controls loop width="100%"></video>
+          <video id="video" style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="storeimg/bcimg.jpg" controls autoplay  muted loop width="100%"></video>
                 </figure>
               </div>
             </div>
