--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li class="home"><a href="index.html">HOME</a></li>
                 <li><a href="store.html">STORE</a></li>
-                <div class="dropdown">
+                <div id="nonedropdown" class="dropdown">
                     <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         DROPDOWN
                     </button>
@@ -253,8 +253,8 @@
                 About Us
             </div>
             <div class="parafot">
-                <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Eius <br>quae reiciendis distinctio
-                    <br>voluptates sed dolorum excepturi <br>iure eaque, aut unde.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius quae reiciendis distinctio
+                    voluptates sed dolorum excepturiiure eaque, aut unde.
                 </p>
             </div>
         </div>
