--- a/about.html
+++ b/about.html
@@ -1,114 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width='device-width',initial-scale=1.0">
-    <title>ABOUT PAGE</title>
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width='device-width',initial-scale=1.0">
+  <title>ABOUT PAGE</title>
+  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <header>
-        <div class="text">
-            <a href="index.html" class="text clone">Pharma</a>
+  <header>
+    <div class="text">
+      <a href="index.html" class="text clone">Pharma</a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="store.html">STORE</a></li>
+        <div class="dropdown">
+          <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            DROPDOWN
+          </button>
+          <ul class="dropdown-menu">
+            <li><a style="text-decoration: none;" class="dropdown-item active" href="#">Supplements</a></li>
+            <li><a style="text-decoration: none;" class="dropdown-item" href="#">Vitamins</a></li>
+            <li><a style="text-decoration: none;" class="dropdown-item" href="#">Diet & Nutrition</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a style="text-decoration: none;" class="dropdown-item" href="#">Tea & Coffee</a></li>
+          </ul>
         </div>
-        <nav>
-            <ul>
-                <li ><a href="index.html">HOME</a></li>
-                <li><a href="store.html">STORE</a></li>
-                <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        DROPDOWN
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a  style="text-decoration: none;" class="dropdown-item active" href="#">Supplements</a></li>
-                        <li><a  style="text-decoration: none;"class="dropdown-item" href="#">Vitamins</a></li>
-                        <li><a  style="text-decoration: none;"class="dropdown-item" href="#">Diet & Nutrition</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a style="text-decoration: none;" class="dropdown-item" href="#">Tea & Coffee</a></li>
-                    </ul>
-                </div>
-                <li class="about"><a href="about.html">ABOUT</a></li>
-                <li><a href="order.html">ORDER</a></li>
-            </ul>
-        </nav>
-        <div class="headericon">
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="store.html"><i class="fa-solid fa-bag-shopping"></i></a>
-        </div>
-    </header>
-    <section class="sec1">
-<div class="mainhead">
-    <h1>About us</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum <br>obcaecati natus iure voluptatum eveniet harum recusandae <br> ducimus saepe.</p>
-</div>
-    </section>
-    <section class="sec2">
-        <div class="container">
-            <div class="row mb-5">
-              <div class="col-md-6">
-                <div class="block-16">
-                  <figure>
-            <video style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="image/doctor.jpg"  controls  muted loop  width="100%"></video>
-                  </figure>
-                </div>
-              </div>
-              <div class="col-md-1"></div>
-              <div id="pad" class="col-md-5">
-                <div class="site-section-heading pt-3 mb-4">
-                  <h2 id="abouth2" class="text-black">How We Started</h2>
-                </div>
-                <div class="para">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellat, dicta at laboriosam, nemo
-                  exercitationem itaque eveniet architecto cumque, deleniti commodi molestias repellendus quos sequi hic fugiat
-                  asperiores illum. Atque, in, fuga excepturi corrupti error corporis aliquam unde nostrum quas.</p>
-                <p>Accusantium dolor ratione maiores est deleniti nihil? Dignissimos est, sunt nulla illum autem in, quibusdam
-                  cumque recusandae, laudantium minima repellendus.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-    </section>
-    <section class="sec3">
-      <div class="container">
-          <div id="padtop" class="row mb-5">
-            <div class="col-md-5 padhead">
-              <div class="site-section-heading pt-3 mb-4">
-                <h2 id="abouth2"class="text-black">We Are Trusted Company</h2>
-              </div>
-              <div class="para">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellat, dicta at laboriosam, nemo
-                exercitationem itaque eveniet architecto cumque, deleniti commodi molestias repellendus quos sequi hic fugiat
-                asperiores illum. Atque, in, fuga excepturi corrupti error corporis aliquam unde nostrum quas.</p>
-              <p>Accusantium dolor ratione maiores est deleniti nihil? Dignissimos est, sunt nulla illum autem in, quibusdam
-                cumque recusandae, laudantium minima repellendus.</p>
-              </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-6">
-              <div class="block-16">
-                <figure>
-          <video id="video" style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="storeimg/bcimg.jpg" controls autoplay  muted loop width="100%"></video>
-                </figure>
-              </div>
-            </div>
-           
-      
+        <li class="about"><a href="about.html">ABOUT</a></li>
+        <li><a href="order.html">ORDER</a></li>
+      </ul>
+    </nav>
+    <div class="headericon">
+      <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+      <a href="store.html"><i class="fa-solid fa-bag-shopping"></i></a>
+    </div>
+  </header>
+  <section class="sec1">
+    <div class="mainhead">
+      <h1>About us</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum <br>obcaecati natus iure voluptatum eveniet
+        harum recusandae <br> ducimus saepe.</p>
+    </div>
+  </section>
+  <section class="sec2">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-6">
+          <div class="block-16">
+            <figure>
+              <video style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4" poster="image/doctor.jpg"
+                controls muted loop width="100%"></video>
+            </figure>
           </div>
         </div>
+        <div class="col-md-1"></div>
+        <div id="pad" class="col-md-5">
+          <div class="site-section-heading pt-3 mb-4">
+            <h2 id="abouth2" class="text-black">How We Started</h2>
+          </div>
+          <div class="para">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellat, dicta at laboriosam, nemo
+              exercitationem itaque eveniet architecto cumque, deleniti commodi molestias repellendus quos sequi hic
+              fugiat
+              asperiores illum. Atque, in, fuga excepturi corrupti error corporis aliquam unde nostrum quas.</p>
+            <p>Accusantium dolor ratione maiores est deleniti nihil? Dignissimos est, sunt nulla illum autem in,
+              quibusdam
+              cumque recusandae, laudantium minima repellendus.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="sec3">
+    <div class="container">
+      <div id="padtop" class="row mb-5">
+        <div class="col-md-5 padhead">
+          <div class="site-section-heading pt-3 mb-4">
+            <h2 id="abouth2" class="text-black">We Are Trusted Company</h2>
+          </div>
+          <div class="para">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius repellat, dicta at laboriosam, nemo
+              exercitationem itaque eveniet architecto cumque, deleniti commodi molestias repellendus quos sequi hic
+              fugiat
+              asperiores illum. Atque, in, fuga excepturi corrupti error corporis aliquam unde nostrum quas.</p>
+            <p>Accusantium dolor ratione maiores est deleniti nihil? Dignissimos est, sunt nulla illum autem in,
+              quibusdam
+              cumque recusandae, laudantium minima repellendus.</p>
+          </div>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-6">
+          <div class="block-16">
+            <figure>
+              <video id="video" style="padding-top: 50px; border-radius: 8px;" src="storeimg/video.mp4"
+                poster="storeimg/bcimg.jpg" controls autoplay muted loop width="100%"></video>
+            </figure>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
   </section>
   <section class="sec4">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="">
-          <div class="icon mr-4 align-self-start">
+        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up"
+          data-aos-delay="">
+          <div id="imgtext" class="icon mr-4 align-self-start">
             <span class="truck"><i class="fa-solid fa-truck"></i></span>
           </div>
           &nbsp;
@@ -119,8 +129,9 @@
               tincidunt fringilla.</p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-          <div class="icon mr-4 align-self-start">
+        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up"
+          data-aos-delay="100">
+          <div id="imgtext" class="icon mr-4 align-self-start">
             <span class="fresh"><i class="fa-solid fa-rotate-right"></i></span>
           </div>
           &nbsp;
@@ -131,15 +142,17 @@
               tincidunt fringilla.</p>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-          <div class="icon mr-4 align-self-start">
+        <div class="col-lg-4 col-md-12 d-lg-flex mb-4 mb-lg-0 pl-4 aos-init aos-animate" data-aos="fade-up"
+          data-aos-delay="200">
+          <div  id="imgtext" class="icon mr-4 align-self-start">
             <span class="quest"><i class="fa-solid fa-circle-question"></i></span>
           </div>
-          &nbsp;
-          &nbsp;
+      <div id="spaceimg">&nbsp;</div>
+      <div id="spaceimg">&nbsp;</div>
           <div class="text">
             <h3 class="">Customer Support</h3>
-            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer accumsan
+            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at iaculis quam. Integer
+              accumsan
               tincidunt fringilla.</p>
           </div>
         </div>
@@ -155,7 +168,7 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-lg-6 mb-5">
-  
+
           <div class="block-38 text-center">
             <div class="block-38-img">
               <div class="block-38-header  para">
@@ -164,7 +177,8 @@
                 <p class="block-38-subheading">CEO/Co-Founder</p>
               </div>
               <div class="block-38-body managepara">
-                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
+                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit
+                  distinctio
                   recusandae doloribus ut fugit officia voluptate soluta. </p>
               </div>
             </div>
@@ -179,7 +193,8 @@
                 <p class="block-38-subheading">Co-Founder</p>
               </div>
               <div class="block-38-body managepara">
-                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
+                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit
+                  distinctio
                   recusandae doloribus ut fugit officia voluptate soluta. </p>
               </div>
             </div>
@@ -194,7 +209,8 @@
                 <p class="block-38-subheading">Marketing</p>
               </div>
               <div class="block-38-body managepara">
-                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
+                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit
+                  distinctio
                   recusandae doloribus ut fugit officia voluptate soluta. </p>
               </div>
             </div>
@@ -209,7 +225,8 @@
                 <p class="block-38-subheading">Sales Manager</p>
               </div>
               <div class="block-38-body managepara">
-                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio
+                <p id="imgpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit
+                  distinctio
                   recusandae doloribus ut fugit officia voluptate soluta. </p>
               </div>
             </div>
@@ -220,42 +237,45 @@
   </section>
   <footer>
     <div class="fotabout">
-        <div class="aboutfot">
-            About Us
-        </div>
-        <div class="parafot">
-            <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Eius <br>quae reiciendis distinctio
-                <br>voluptates sed dolorum excepturi <br>iure eaque, aut unde.</p>
-        </div>
+      <div class="aboutfot">
+        About Us
+      </div>
+      <div class="parafot">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eiusquae reiciendis distinctio
+          voluptates sed dolorum excepturiiure eaque, aut unde.
+        </p>
+      </div>
     </div>
 
     <div class="footlinks">
-        <div class="quick">
-            Quick Links
-        </div>
-        <div class="foot11">
-            <div> Supplements</div>
-            <div> Vitamins</div>
-            <div> Diet & Nutrition</div>
-            <div> Tea & Coffee</div>
-        </div>
+      <div class="quick">
+        Quick Links
+      </div>
+      <div class="foot11">
+        <div> Supplements</div>
+        <div> Vitamins</div>
+        <div> Diet & Nutrition</div>
+        <div> Tea & Coffee</div>
+      </div>
     </div>
     <div class="footcont">
-        <div class="cont">
-            Contact Info
+      <div class="cont">
+        Contact Info
+      </div>
+      <div class="contactfot">
+        <div><i class="fa-solid fa-location-dot"></i> 203 Fake St. Mountain View,<br> San Francisco, California,
+          USA</div>
+        <div><a href="mailto:abc@gmail.com"><i class="fa-solid fa-envelope"></i> emailaddress@domain.com</a>
+          <div><a href="tel:3918*******"><i class="fa-solid fa-phone"></i> +2 392 3929 210</a></div>
         </div>
-        <div class="contactfot">
-            <div><i class="fa-solid fa-location-dot"></i> 203 Fake St. Mountain View,<br> San Francisco, California,
-                USA</div>
-                <div><a href="mailto:abc@gmail.com"><i class="fa-solid fa-envelope"></i> emailaddress@domain.com</a>
-            <div><a href="tel:3918*******"><i class="fa-solid fa-phone"></i> +2 392 3929 210</a></div>
-            </div>
-        </div>
+      </div>
     </div>
-</footer>
-<div class="lastfot">
-  <p>Copyright © 2025 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by
-      <span>Colorlib</span></p>
-</div> 
+  </footer>
+  <div class="lastfot">
+    <p>Copyright © 2025 All rights reserved | This template is made with <i class="fa-solid fa-heart"></i> by
+      <span>Colorlib</span>
+    </p>
+  </div>
 </body>
+
 </html>
